Added teriyaki recipe page
Created skeleton for teriyaki recipe page to add recipter details later.

--- a/recipes/teriyaki.html
+++ b/recipes/teriyaki.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/teriyaki.html">Oven Baked Chicken Teriyaki</a>
+    <a href="../index.html">Home</a>
+    <h1>Oven Baked Chicken Teriyaki</h1>
 </body>
 </html>
