Added teriyaki recipe page content
Added the description, ingredients, and steps for the teriyaki recipe page.

--- a/recipes/teriyaki.html
+++ b/recipes/teriyaki.html
@@ -8,5 +8,31 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Oven Baked Chicken Teriyaki</h1>
+    <img src="https://www.allrecipes.com/thmb/465Mnu8OnP_ezfCojbv5YVk7TQI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5540949-oven-baked-chicken-teriyaki-tonyLovesKalbi-1x1-1-db9c91f52aab488b95eabd69d4bec6ec.jpg" alt = "Oven Baked Chicken Teriyaki"
+    height="310" width="310">
+    <h1>Description</h1>
+    <p>
+        This is an easy oven-baked chicken teriyaki recipe made with a simple marinade. Serve over rice for a quick weeknight dinner.
+    </p>
+    <h1>Ingredients</h1>
+    <ul>
+        <li>2 tablespoons cornstarch</li>
+        <li>2 tablespoons cold water</li>
+        <li>1/4 cup white sugar</li>
+        <li>1/2 cup soy sauce</li>
+        <li>1/4 cup cider vinegar</li>
+        <li>1 clove garlic, minced</li>
+        <li>1/2 teaspoon ground ginger</li>
+        <li>1/4 teaspoon ground black pepper</li>
+        <li>12 skinless chicken thighs</li>
+    </ul>
+    <h1>Steps</h1>
+    <ol>
+        <li>Preheat oven to 400 degrees F (200 degrees C).</li>
+        <li>Combine cornstarch, cold water, sugar, soy sauce, vinegar, garlic, ginger, and black pepper in a small saucepan. Bring to a simmer over low heat and cook, stirring frequently, until sauce thickens and bubbles.</li>
+        <li>Arrange chicken thighs in a baking dish. Pour sauce over chicken.</li>
+        <li>Bake in the preheated oven until no longer pink at the bone and the
+            juices run clear, about 30 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li> 
+    </ol>
 </body>
 </html>
