Added curry recipe
Added currey recipe page and content.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/teriyaki.html">Oven Baked Chicken Teriyaki</a>
+    <a href="recipes/curry.html">Indian Chicken Curry (Murgh Kari)</a>
 </body>
 </html>
